Dark_Heresy/DarkHeresyStyle.css
/* ... */
.sheet-rolltemplate-dh1ed td {
	padding-left: 10px;
	font-size   : 15px;
	color       : rgb(80, 80, 80);
}

.sheet-rolltemplate-dh1ed td:last-child {
	float        : right;
	padding-left : 0;
	padding-right: 20px;
}

.sheet-rolltemplate-dh1ed tr.sheet-success th,
.sheet-rolltemplate-dh1ed tr.sheet-failure th {
	padding-left: 0px;
	padding-top : 5px;
	text-align  : center;
	font-size   : 1.3em;
	font-weight : bold;
}

.sheet-rolltemplate-dh1ed .inlinerollresult {
	padding         : 0;
	background-color: transparent;
	border          : none;
}

.sheet-rolltemplate-dh1ed .sheet-inlinerollresult {
	min-width       : 1.5em;
	text-align      : center;
	background-color: transparent;
	border          : none;
	padding         : 0;
	padding-right   : 20px;
	font-weight     : bold;
	font-size       : 1.1em;
}

.sheet-rolltemplate-dh1ed .sheet-success .inlinerollresult,
.sheet-rolltemplate-dh1ed .sheet-damage .inlinerollresult.fullcrit {
	color      : #3FB315;
	font-weight: bold;
}

.sheet-rolltemplate-dh1ed .sheet-failure .inlinerollresult {
	color      : #B31515;
	font-weight: bold;
}

.sheet-rolltemplate-dh1ed .inlinerollresult.fullcrit,
.sheet-rolltemplate-dh1ed .inlinerollresult.fullfail,
.sheet-rolltemplate-dh1ed .inlinerollresult.importantroll {
	border: none;
}

.charsheet .sheet-wrapper .sheet-rangehide{
display            : none;
position           : absolute;
top                : -15px;
background-image   : url(http://i.imgur.com/5GbMHfg.png);
background-position: center;
border             : 1px solid #aaa;
box-shadow         : inset 0 1px 1px rgba(0, 0, 0, 0.075);
border-radius      : 3px;
padding            : 3px;
}

.charsheet .sheet-wrapper .sheet-rangehover:hover ~ .sheet-rangehide {
	display : block;
}

